force-app/main/default/objects/Applicable_Accounting_Code__c/Applicable_Accounting_Code__c.object-meta.xml
<CustomObject>
    <description>Junction object between violation types and accounting codes to define the accounting codes that are applied on each violation type when a payment is made on a violation. Serves to define to which fund, pca, etc monies received apply when a payment is applied by accounting.</description>
    <label>Applicable Accounting Code</label>
    <nameField>
        <displayFormat>AAC-{00000}</displayFormat>
        <label>Applicable Accounting Code Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Applicable Accounting Codes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>