force-app/main/default/objects/Applicable_Accounting_Code__c/fields/Accounting_Code__c.field-meta.xml
<CustomField>
    <fullName>Accounting_Code__c</fullName>
    <description>Link to the Accounting Code which defines where monies from a payment should be allocated</description>
    <inlineHelpText>Select the accounting code you intend the map a to a violation type.</inlineHelpText>
    <label>Accounting Code</label>
    <referenceTo>Accounting_Code__c</referenceTo>
    <relationshipLabel>Applicable Accounting Codes</relationshipLabel>
    <relationshipName>Applicable_Accounting_Codes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>