force-app/main/default/objects/Applicable_Accounting_Code__c/fields/Import_Comments__c.field-meta.xml
<CustomField>
    <fullName>Import_Comments__c</fullName>
    <label>Import Comments</label>
    <type>TextArea</type>
</CustomField>