force-app/main/default/objects/Applicable_Accounting_Code__c/fields/Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>Payment_Type__c</fullName>
    <description>Pulls the payment type down from the accounting code that defines to which payment types this will apply.</description>
    <formula>TEXT ( Accounting_Code__r.Payment_Type__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Type</label>
    <type>Text</type>
</CustomField>