force-app/main/default/objects/Applicable_Accounting_Code__c/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <description>Pulls the program to which this code applies for display in the related list on the accounting code object.</description>
    <formula>TEXT ( Accounting_Code__r.Program__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Program</label>
    <type>Text</type>
</CustomField>