force-app/main/default/objects/Applicable_Accounting_Code__c/fields/Split_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Split_Percentage__c</fullName>
    <defaultValue>1</defaultValue>
    <description>When applied funds are to be split between two or more codes, this field defines the split applied to each accounting code.</description>
    <inlineHelpText>If there is more than one code that applies on to a violation type, enter the percent split that a payment on this violation type should go to this accounting code.</inlineHelpText>
    <label>Split Percentage</label>
    <precision>5</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>