force-app/main/default/objects/Applicable_Accounting_Code__c/fields/Violation_Type__c.field-meta.xml
<CustomField>
    <fullName>Violation_Type__c</fullName>
    <description>Links one or more codes to a violation type so that monies applied as payments to a violation type can be applied to the appropriate accounts</description>
    <inlineHelpText>Select the Violation Type for which the selected code is to apply</inlineHelpText>
    <label>Violation Type</label>
    <referenceTo>Violation_Type__c</referenceTo>
    <relationshipLabel>Applicable Accounting Codes</relationshipLabel>
    <relationshipName>Applicable_Accounting_Codes</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>