force-app/main/default/objects/Applicable_Accounting_Code__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Accounting_Code__c</columns>
    <columns>Violation_Type__c</columns>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>Industry__c</columns>
    <columns>Split_Percentage__c</columns>
    <columns>Program__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>